--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "tailwindcss": "^1.9.5"
+    "autoprefixer": "^10.4.0",
+    "parcel": "^2.0.1",
+    "tailwindcss": "^3.0.6"
   },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "source": "src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development parcel src/index.html",
-    "build": "NODE_ENV=production parcel build src/index.html",
+    "start": "NODE_ENV=development parcel",
+    "build": "NODE_ENV=production parcel build",
     "clean": "rm -rf dist && rm -rf .cache"
   },
   "repository": {
